# AI-Bot-Framework-

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml  build-validation.yml  production-build.yml  python-tests.yml  security-scan.yml
tests/: test_framework.py
