[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bot-framework"
version = "0.1.0"
description = "AI Bot Framework - Comprehensive framework for building AI-powered bots"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "CarneyBuildAi", email = "carneyjoseph39@yahoo.com"}
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"